3.5.309. I'm silly and forgot to account for the player controls being shifted up when conversations are on the bottom of the screen. (Also, sub count fixes.) Closes #12

--- a/style.css
+++ b/style.css
@@ -302,13 +302,20 @@ body.ffz-bttv-dark .ffz-ui-toggle.blue.live:hover svg.svg-emoticons path { fill:
 	color: #aaa;
 
 	position: fixed;
-	bottom: 55px;
 	left: 10px;
 
 	width: auto;
 
 	z-index: 7;
 	padding: 10px;
+}
+
+.ffz-theater-stats .app-main.theatre .cn-metabar__more {
+	bottom: 55px;
+}
+
+.ffz-theater-stats:not(.ffz-theatre-conversations):not(.ffz-top-conversations) .app-main.theatre .cn-metabar__more {
+	bottom: 95px;
 }
 
 .ffz-theater-stats .app-main.theatre .cn-metabar__more span,
